tempfile/derive_more/tests/compile_fail/as_mut/unknown_struct_attr_arg.rs
#[derive(derive_more::AsMut)]
#[as_mut(baz)]
struct Foo {
    bar: i32,
}

fn main() {}
